# pr-review-council

./: .gitignore  PRD.md  README.md  TODO.md  install.sh  pyproject.toml
images/: demo.py  pr-council.tape
src/prc/: __init__.py  __main__.py  chair.py  chairman.py  cli.py  config.py  context.py  council.py  git_ops.py  prompts.py
src/prc/pr_platforms/: __init__.py  _diff_utils.py  base.py  bitbucket.py  github.py  gitlab.py
src/prc/reviewers/: __init__.py  _registry.py  anthropic.py  base.py  cli.py  google.py  openai_compat.py
tests/: test_chair.py  test_chairman.py  test_cli.py  test_cli_reviewers.py  test_config.py  test_context.py  test_council.py  test_git_ops.py  test_pr_platforms.py  test_prompts.py  test_reviewers_registry.py
