[project]
name = "pr-review-council"
version = "0.1.0"
description = "Multi-LLM council code review for local git branches"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.40",
    "openai>=1.50",
    "google-genai>=0.3",
    "typer>=0.12",
    "rich>=13",
]

[project.scripts]
prc = "prc.cli:app"

[dependency-groups]
dev = [
    "pytest>=8",
    "pytest-mock>=3.12",
    "ruff>=0.6",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/prc"]
