[project]
name = "pr-review-council"
version = "0.2.0"
description = "Multi-LLM council code review for local git branches"
readme = "README.md"
requires-python = ">=3.11"
keywords = ["cli", "code-review", "llm", "pull-request", "git"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Quality Assurance",
]
dependencies = [
    "anthropic>=0.40",
    "openai>=1.50",
    "google-genai>=0.3",
    "typer>=0.12",
    "rich>=13",
]

[project.scripts]
prc = "prc.cli:app"

[project.urls]
Homepage = "https://github.com/hfoffani/pr-review-council"
Repository = "https://github.com/hfoffani/pr-review-council"
Issues = "https://github.com/hfoffani/pr-review-council/issues"

[dependency-groups]
dev = [
    "pytest>=8",
    "pytest-mock>=3.12",
    "ruff>=0.6",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/prc"]
